# metamons_scripts

./: .gitignore  README.md  requirements.txt
client/: README.md  config.py  demo.py  exceptions.py  gui.py  main.py  metamons.py  models.py  pyproject.toml  requirements.txt  thread_util.py  w3.py  web3_main.py  web3_prod.py  web3_test.py
client/abis/: ERC20ABI.json  MyABI.json
client/data/: curl.md  pk_fail.json  pk_succ.json
client/gui_demo/: Demo_Table_Element_Header_or_Cell_Clicks.py  file_rename.py  gui_demo.py  gui_resume.py  gui_table.py
front/: .env.production  package.json
front/source_code/: App.js  abi.json  etherscan-provider.ts  index.js  inpage.js  nonce-tracker.js
front/src/: main.js
front/src/router/modules/: root.js
front/src/views/: index.vue  matamask.vue  metamask.vue
serve/: Dockerfile  README.md  battel.py  main.py  pylint.conf  pyproject.toml  utils.py
serve/api/: __init__.py  beatstars.py  index.py  user.py
serve/conf/: config.py  config_default.yml  config_dev.yml
serve/configuration/: __init__.py  config.py  config_helper.py
serve/db/: session.py
serve/models/: models.py
serve/services/: user.py
